--- a/style.css
+++ b/style.css
@@ -124,4 +124,13 @@ nav ul li a {
     box-shadow: 2px 2px 10px black;
     margin: 0 10px;
 }
+.first h1 {
+    font-size: 10px;
+}
+.second h1 {
+    font-size: 10px;
+}
+.third h1 {
+    font-size: 10px;
+}
 
