--- a/responsive.css
+++ b/responsive.css
@@ -68,10 +68,25 @@
         padding: 10px;
         align-items: center;
     }
+    .pendidikan {
+        display: flex;
+        flex-wrap: wrap-reverse;
+    }
     /* .card {
         box-shadow: 2px 2px 10px black;
         border-radius: 30px;
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     } */
+}
+@media (max-width:1000px) {
+    .pendidikan img {
+        width: 200px;
+    }
+}
+@media (max-width:732px) {
+    .pendidikan {
+        display: flex;
+        flex-wrap: wrap-reverse;
+    }
 }
