--- a/style.css
+++ b/style.css
@@ -106,31 +106,31 @@ nav ul li a {
 .pendidikan {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .pendidikan img {
     width: 300px;
     margin:0 10px;
-    padding: 10px;
+    padding:10px 5px 5px 5px;
 }
 .first {
     box-shadow: 2px 2px 10px black;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 .second {
     box-shadow: 2px 2px 10px black;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 .third {
     box-shadow: 2px 2px 10px black;
-    margin: 0 10px;
+    margin: 0 5px;
 }
-.first h1 {
-    font-size: 10px;
+.first h3 {
+    text-align: center;
 }
-.second h1 {
-    font-size: 10px;
+.second h3 {
+    text-align: center;
 }
-.third h1 {
-    font-size: 10px;
+.third h3 {
+    text-align: center;
 }
-
