--- a/responsive.css
+++ b/responsive.css
@@ -6,6 +6,12 @@
         padding-right: 30px;
     }
 }
+@media (max-width:320px) {
+    nav ul li a {
+        font-size: 15px;
+        margin: 10px 0;
+    }
+}
 @media (max-width:430px) {
     .icons {
         display: inline-flex;
@@ -53,6 +59,7 @@
     .teks {
         font-size: 13px;
         text-align: center;
+        padding: 0 5px;
     }
     #home img {
         width: 150px;
